# TableOS

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tableos/app/: AppInfo.kt  AppsAdapter.kt  KeystoneOverlayView.kt  KeystoneProvider.kt  KeystoneWarpLayout.kt  MainActivity.kt
app/src/main/res/drawable/: ic_tableos_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_app_tile.xml
app/src/main/res/values/: dimens.xml  styles.xml
beakerlab/: build.gradle
beakerlab/src/main/: AndroidManifest.xml
beakerlab/src/main/cpp/: CMakeLists.txt  shape_detector_jni.cpp
beakerlab/src/main/java/com/tableos/beakerlab/: BeakerCanvasView.kt  CameraManager.kt  ChemicalCard.kt  ChemicalReactionEngine.kt  KeystoneWarpLayout.kt  MainActivity.kt  ShapeDetectorJNI.java
beakerlab/src/main/res/drawable/: ic_flask.xml  reaction_status_background.xml
beakerlab/src/main/res/layout/: activity_main.xml
cv_android_ndk_package/native/: CMakeLists.txt  README.md  card_encoder_decoder.cpp  card_encoder_decoder.h  card_encoder_decoder_c_api.cpp  card_encoder_decoder_c_api.h  detect_decode_api.cpp  detect_decode_api.h  detect_decode_cli.cpp  dot_card_detect.cpp  dot_card_detect.h  image_processing.cpp  image_processing.h
docs/: keystone-warp-integration.md
lenslab/: build.gradle  proguard-rules.pro
lenslab/src/main/: AndroidManifest.xml
lenslab/src/main/java/com/lenslab/: MainActivity.kt
lenslab/src/main/java/com/lenslab/fit/: FitResult.kt  LensOverlayParser.kt  MirrorOverlayParser.kt
lenslab/src/main/java/com/lenslab/optics/: ConcaveLens.kt  ConvexLens.kt  CustomLens.kt  LaserEmitter.kt  OpticalComponent.kt  OpticsEngine.kt  PlaneMirror.kt  TriangularPrism.kt  Vector2.kt
lenslab/src/main/java/com/lenslab/ui/: OpticsView.kt
lenslab/src/main/res/drawable/: ic_prism_foreground.xml
lenslab/src/main/res/layout/: activity_main.xml
lenslab/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
lenslab/src/main/res/values/: colors.xml  strings.xml  styles.xml
settings/: build.gradle
settings/src/main/: AndroidManifest.xml
settings/src/main/assets/: border_coordinates.csv
settings/src/main/cpp/: CMakeLists.txt  bridge_jni.cpp
settings/src/main/java/com/tableos/settings/: AboutSettingsFragment.kt  AppsSettingsFragment.kt  DashedBorderView.kt  DesktopCalibrationFragment.kt  DisplaySettingsFragment.kt  InputControlSettingsFragment.kt  InputRecognitionTestFragment.kt  IntentUtils.kt  KeystoneCalibratorView.kt  KeystoneWarpLayout.kt  NetworkSettingsFragment.kt  PerspectiveTestFragment.kt  ProjectionCardsBridge.kt  RecognitionOverlayView.kt  RootSettingsFragment.kt  SettingsActivity.kt  SoundSettingsFragment.kt  StorageSettingsFragment.kt  VideoInputTestFragment.kt
settings/src/main/res/drawable/: ic_settings_gear.xml
settings/src/main/res/layout/: activity_settings.xml  fragment_desktop_calibration.xml  fragment_input_recognition_test.xml  fragment_perspective_test.xml  fragment_video_input_test.xml
settings/src/main/res/xml/: about_preferences.xml  apps_preferences.xml  display_preferences.xml  input_control_preferences.xml  network_preferences.xml  root_preferences.xml  sound_preferences.xml  storage_preferences.xml
shape_recognition_ndk/: README.md
shape_recognition_ndk/native/: Android.mk  Application.mk  CMakeLists.txt  example_usage.cpp  shape_detector.cpp  shape_detector.h  shape_detector_c_api.cpp  shape_detector_c_api.h  test_real_image  test_real_image.cpp  test_realtime_camera  test_realtime_camera.cpp  test_shape_detector  test_shape_detector.cpp
super_update/: PUBLIC_IP_TROUBLESHOOTING.md  README.md  build.gradle  proguard-rules.pro  test_public_ip.py  test_script.py  test_system.py
super_update/remote_client/: README.md  super_update_client.py
super_update/src/main/: AndroidManifest.xml
super_update/src/main/java/com/tableos/superupdate/: ApkInstaller.kt  DeviceAdminReceiver.kt  InstallResultReceiver.kt  MainActivity.kt  NetworkUtils.kt  PermissionUtils.kt  RootUtils.kt  UpdateService.kt  WebSocketServer.kt
super_update/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_simple.xml
super_update/src/main/res/layout/: activity_main.xml
super_update/src/main/res/values/: colors.xml  strings.xml  themes.xml
super_update/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  device_admin_policies.xml  file_paths.xml  network_security_config.xml
super_update/test_apk/: build.gradle
super_update/test_apk/src/main/: AndroidManifest.xml
super_update/test_apk/src/main/java/com/tableos/testapp/: MainActivity.kt
super_update/test_apk/src/main/res/drawable/: ic_test_launcher.xml
super_update/test_apk/src/main/res/values/: themes.xml
test_app/: build.gradle
test_app/src/main/java/com/tableos/testapp/: MainActivity.kt
test_app/src/main/res/drawable/: ic_tableos_foreground.xml
test_app/src/main/res/layout/: activity_main.xml
test_app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
test_app/src/main/res/mipmap-hdpi/: ic_launcher.xml
test_app/src/main/res/values/: colors.xml  strings.xml
test_app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
warp/: build.gradle
warp/src/main/java/com/tableos/warp/: KeystoneWarpLayout.kt
